<resources>
    <string name="app_name">Camotero</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="start_session">Iniciar Sesión</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="registry">Regístrate aquí</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>


    <string name="yes">Aceptar</string>
    <string name="no">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
